--- a/StaticVsDynamicResource/StaticVsDynamicResource/StaticVsDynamicResource.csproj
+++ b/StaticVsDynamicResource/StaticVsDynamicResource/StaticVsDynamicResource.csproj
@@ -40,6 +40,9 @@
     <Compile Include="StaticResourcePage.xaml.cs">
       <DependentUpon>StaticResourcePage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="StaticVsDynamicPage.xaml.cs">
+      <DependentUpon>StaticVsDynamicPage.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -61,6 +64,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="StaticResourcePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="StaticVsDynamicPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
